<resources>
    <string name="app_name">Avoid This Area</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_create_report">CreateReport</string>
    <string name="dangerTypeText">Danger Type</string>
    <string name="descriptionText">Description</string>
    <string name="description_hint">Write over here</string>
    <string name="dangerLevel">Danger Level</string>
    <string name="policeOnSite">Police on-site</string>
</resources>
