<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.raul4916.avoidthisarea.CreateReport"
    tools:showIn="@layout/activity_create_report"
    android:orientation="vertical">
    <TextView
        android:id="@+id/danger_type_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/dangerTypeText"
        android:textSize="10dp"
        />
    <Spinner
        android:id="@+id/danger_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dangerLevel"/>
    <RadioGroup
        android:id="@+id/danger_level_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"/>
        <RadioButton
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"/>
        <RadioButton
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"/>
        <RadioButton
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4"
            />
        <RadioButton
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"/>
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descriptionText"
        android:textSize="10dp"
        />
    <EditText
        android:id="@+id/description_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_hint"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="100"
        android:maxLines="2" />
    <CheckBox
        android:id="@+id/police_on_site_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/policeOnSite"
        />




</LinearLayout>
